# s3lo

./: .gitignore  1.cmd  __main__.py  boto.cfg  clean.cmd  clean.sh  download.cmd  in_venv.cmd  init.cmd  k37-if-ceph01.test.vtb.ru.pem  make_bin.cmd  make_bin.sh  make_exe.cmd  make_exe2.cmd  make_exe2.sh  make_pyz.cmd  make_pyz.py  make_pyz.sh  make_whl.cmd  make_whl.sh  project.ini  pyproject.toml  readme.md  requirements.txt  run.cmd  run.sh  s3api.py  s3cli.py  s3if.py  settings.cmd  test.cmd  testapi.py
boto/: __init__.py  auth.py  auth_handler.py  compat.py  connection.py  exception.py  handler.py  https_connection.py  jsonresponse.py  plugin.py  provider.py  regioninfo.py  resultset.py  storage_uri.py  utils.py
boto/cacerts/: __init__.py  cacerts.txt
boto/gs/: __init__.py  acl.py  bucket.py  bucketlistresultset.py  connection.py  cors.py  encryptionconfig.py  key.py  lifecycle.py  resumable_upload_handler.py  user.py
boto/logs/: __init__.py  exceptions.py  layer1.py
boto/pyami/: __init__.py  bootstrap.py  config.py  copybot.py  helloworld.py  launch_ami.py  startup.py
boto/pyami/installers/: __init__.py
boto/pyami/installers/ubuntu/: __init__.py  apache.py  ebs.py  installer.py  mysql.py  trac.py
boto/s3/: __init__.py  acl.py  bucket.py  bucketlistresultset.py  bucketlogging.py  connection.py  cors.py  deletemarker.py  key.py  keyfile.py  lifecycle.py  multidelete.py  multipart.py  prefix.py  resumable_download_handler.py  user.py  website.py
s3lo/: __init__.py  __main__.py  api.py  cli.py  ui.py
s3lo/api/: __init__.py
s3lo/cli/: __init__.py
